# hyprwire-debian

./: .gitignore  CMakeLists.txt  README.md  flake.nix  hyprwire.pc.in
.github/workflows/: nix.yml  sync.yml
docs/: WIRE.md
include/hyprwire/: hyprwire.hpp
include/hyprwire/core/: ClientSocket.hpp  ServerSocket.hpp
include/hyprwire/core/implementation/: ClientImpl.hpp  Object.hpp  ServerImpl.hpp  Spec.hpp  Types.hpp
include/hyprwire/core/types/: MessageMagic.hpp
nix/: default.nix  overlays.nix
scanner/: CMakeLists.txt  hyprwire-scanner-config.cmake.in  hyprwire-scanner.pc.in  main.cpp
src/: Macros.hpp
src/core/client/: ClientObject.cpp  ClientObject.hpp  ClientSocket.cpp  ClientSocket.hpp  ServerSpec.hpp
src/core/implementation/: Object.cpp  Spec.cpp
src/core/message/: MessageMagic.cpp  MessageMagic.hpp  MessageParser.cpp  MessageParser.hpp  MessageType.hpp
src/core/message/messages/: BindProtocol.cpp  BindProtocol.hpp  FatalProtocolError.cpp  FatalProtocolError.hpp  GenericProtocolMessage.cpp  GenericProtocolMessage.hpp  HandshakeAck.cpp  HandshakeAck.hpp  HandshakeBegin.cpp  HandshakeBegin.hpp  HandshakeProtocols.cpp  HandshakeProtocols.hpp  Hello.cpp  Hello.hpp  IMessage.cpp  IMessage.hpp  NewObject.cpp  NewObject.hpp  RoundtripDone.cpp  RoundtripDone.hpp  RoundtripRequest.cpp  RoundtripRequest.hpp
src/core/server/: ServerClient.cpp  ServerClient.hpp  ServerObject.cpp  ServerObject.hpp  ServerSocket.cpp  ServerSocket.hpp
src/core/socket/: SocketHelpers.cpp  SocketHelpers.hpp
src/core/wireObject/: IWireObject.cpp  IWireObject.hpp
src/helpers/: Defines.hpp  Env.cpp  Env.hpp  FFI.cpp  FFI.hpp  Log.hpp
tests/: Client.cpp  Fork.cpp  Server.cpp  protocol-v1.xml
